<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cindy.ghost.SettingsActivity">

    <EditText
        android:id="@+id/editTextPlayer1"
        android:text="@string/player1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"/>

    <ListView
        android:id="@+id/listViewPlayer1"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPlayer1"/>

    <EditText
        android:id="@+id/editTextPlayer2"
        android:text="@string/player2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewPlayer1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:imeOptions="actionDone"/>

    <ListView
        android:id="@+id/listViewPlayer2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPlayer2">
    </ListView>

    <Button
        android:id="@+id/buttonToGhostGame"
        android:text="@string/play"
        android:clickable="true"
        android:onClick="toGhostGameActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/buttonToHelp"
        android:text="@string/help"
        android:clickable="true"
        android:onClick="toHelpActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToGhostGame"
        android:layout_alignLeft="@+id/buttonToGhostGame"
        android:layout_alignStart="@+id/buttonToGhostGame"/>

    <Button
        android:id="@+id/EnglishButton"
        android:text="@string/English"
        android:clickable="true"
        android:onClick="setEnglishLanguage"
        android:background="#46ff85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonToHelp"
        android:layout_alignLeft="@+id/buttonToHelp"
        android:layout_alignStart="@+id/buttonToHelp"
        android:layout_marginTop="46dp"/>

    <Button
        android:id="@+id/DutchButton"
        android:text="@string/Nederlands"
        android:background="#d5d6d6"
        android:clickable="true"
        android:onClick="setDutchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EnglishButton"
        android:layout_alignLeft="@+id/EnglishButton"
        android:layout_alignStart="@+id/EnglishButton"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/listNames1Button"
        android:text="@string/arrow"
        android:clickable="true"
        android:onClick="visibilityListNames1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextPlayer1"
        android:layout_toRightOf="@+id/editTextPlayer1"
        android:layout_toEndOf="@+id/editTextPlayer1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/listNames2Button"
        android:text="@string/arrow"
        android:clickable="true"
        android:onClick="visibilityListNames2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewPlayer1"
        android:layout_toRightOf="@+id/editTextPlayer2"
        android:layout_toEndOf="@+id/editTextPlayer2"/>

</RelativeLayout>