<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cindy.ghost.MenuActivity">

    <Button
        android:id="@+id/resumeButton"
        android:text="@string/resume"
        android:onClick="toGhostGameActivity"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/highScoreButton"
        android:text="@string/highScore"
        android:clickable="true"
        android:onClick="toHighScoreActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resumeButton"
        android:layout_alignRight="@+id/resumeButton"
        android:layout_alignEnd="@+id/resumeButton"
        android:layout_marginTop="48dp" />

    <Button
        android:id="@+id/newGameButton"
        android:text="@string/newGame"
        android:clickable="true"
        android:onClick="newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/highScoreButton"
        android:layout_alignEnd="@+id/highScoreButton" />

    <Button
        android:id="@+id/helpButton"
        android:text="@string/help"
        android:clickable="true"
        android:onClick="toHelpActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/highScoreButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
